--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ server.servlet.context-path=/api/v1
 
 
 #to run sql queries in springboot we create data.sql file in resources folder and do below configuration
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-spring.sql.init.data-locations=classpath:data.sql
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+#spring.sql.init.data-locations=classpath:data.sql
 
 #security config
 #spring.security.user.name=kaushik
